--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,12 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>About | Our Story</title>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Inter:wght@300;600;800&family=Poppins:wght@100;200;400;800&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&family=Libre+Caslon+Display:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../assets/css/navbar.css">
+<link rel="icon" type="image/png" href="../assets/images/logo.png">
+
 
 <style>
 :root{
@@ -41,7 +46,7 @@ html, body {
 .site-title {
   margin: 0;
   font-family: "Libre Caslon Display", serif;
-  font-size: 3rem;
+  font-size: 5rem;
   line-height: 1;
 }
 .tagline {
@@ -63,7 +68,7 @@ html, body {
   border-radius: 6px;
   position: relative;
   background: var(--accent);
-  box-shadow: 0 10px 40px rgba(0,0,0,0.7);
+  box-shadow: 0 10px 40px rgba(0,0,0);
   perspective: 1200px;
   z-index: 10;
 }
@@ -107,12 +112,12 @@ html, body {
 .hero .bg-text {
   position: absolute;
   left: 50%;
-  top: 36px;
+  top: 16px;
   transform: translateX(-50%) translateZ(-80px);
-  font-family: "Poppins", sans-serif;
+  font-family: "Edu NSW ACT Cursive", cursive;
   font-weight: 200;
   font-size: 3.8rem;
-  color: #ffffff;
+  color: #FFD700;
   pointer-events: none;
   text-shadow: 0 6px 24px rgba(0,0,0,0.7);
   z-index: 1;
@@ -168,12 +173,57 @@ html, body {
   .image-scene { transform: none !important; }
   .hero img { transform: scale(1.01); }
 }
+
+.site-title {
+  font-family: "Libre Caslon Display", serif;
+  font-size: clamp(2rem, 6vw, 3.6rem); /* responsive size */
+  letter-spacing: -1px;
+  line-height: 0.95;
+  text-transform: uppercase;
+  -webkit-font-smoothing: antialiased;
+  margin: 0 0 6px;
+}
+
+.tagline {
+  font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+  color: rgba(255,255,255,0.85);
+  font-weight: 600;
+  margin-top: 10px;
+  font-size: 1rem;
+  opacity: 0.95;
+}
+
+/* subtle animated underline for About page */
+.site-title + .tagline {
+  position: relative;
+  padding-bottom: 8px;
+}
+.site-title + .tagline:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 120px;
+  background: var(--fg);
+  transform-origin: left;
+  transform: scaleX(.01);
+  transition: transform .6s cubic-bezier(.2,.9,.3,1);
+}
+/* trigger underline on hover over header */
+.site-header:hover .site-title + .tagline:after {
+  transform: scaleX(1);
+}
+
+
 </style>
 </head>
+
+
 <body>
 
 
-      <nav id="navbar">
+<nav class="dark">
   <a href="../" class="logo">
   <img src="../assets/images/logo.png" alt="Logo">
 </a>
@@ -185,15 +235,17 @@ html, body {
       <a href="../team/">Team</a>
       <a href="../contact/">Contact</a>
     </div>
-    <button class="btn-sponsor">Sponsor Us</button>
+<a class="btn-sponsor" href="../contact/?name=Jagadeesh&email=mummanajagadeesh97%40gmail.com&message=hw%20world">
+  Sponsor Us
+</a>
   </nav>
 
   
 <div class="page">
 <header class="site-header">
   <div>
-    <h1 class="site-title">About US</h1>
-    <p class="tagline"><strong><em>Driven by Innovation, Fueled by Passion. Explore the boundless horizons of robotics.</em></strong></p>
+    <h1 class="site-title">ABOUT US</h1>
+    <p class="tagline">Driven by Innovation, Fueled by Passion. Explore the boundless horizons of robotics.</p>
   </div>
 </header>
 
