--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
   }
 
   #projects .projects-container {
-    padding: 120px 50px 80px;
+    padding: 120px 50px 200px;
     display: flex;
     flex-direction: column;
     align-items: flex-start; /* align like About */
@@ -683,14 +683,17 @@
       </div>
 
       <!-- Project 3 -->
-      <div class="project-card">
-        <img src="assets/images/projects/hospbed.png" alt="Hospital Bed">
-        <div class="project-overlay">
-          <h2><strong>HOSPITAL BED</strong></h2>
-          <p>Designed for bedridden patients to improve comfort and mobility, allowing independence without constantly relying on caretakers.</p>
-          <a href="projects/hospital-bed/" class="project-link">View Project <span>→</span></a>
-        </div>
-      </div>
+<div class="project-card">
+  <img src="assets/images/projects/gnss-drone.png" alt="Autonomous Drone for GNSS-Denied Environments">
+  <div class="project-overlay">
+    <h2><strong>GNSS DRONE</strong></h2>
+    <p>
+      Autonomous drone built for GNSS-denied environments using SLAM and onboard sensors for precise navigation.
+    </p>
+    <a href="projects/gnss-drone/" class="project-link">View Project <span>→</span></a>
+  </div>
+</div>
+
     </div>
 
     <!-- View All Button -->
