--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>RIGNITC | Robotics Interest Group</title>
-  <link rel="icon" type="image/png" href="assets/images/logo.png">
 
   <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.48/build/spline-viewer.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Tan+Memories&display=swap" rel="stylesheet">
@@ -12,6 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Libre+Caslon+Display&display=swap" rel="stylesheet">
 <link href="https://db.onlinewebfonts.com/c/f39c9c54bc3f4f701ca3b18d675dde06?family=F3D+Techno+W00+Shadow" rel="stylesheet" type="text/css"/>
+<link rel="icon" type="image/png" href="assets/images/logo.png">
 
 <link rel="stylesheet" href="assets/css/navbar.css">
 
@@ -529,6 +529,7 @@
     height: 100%;
     object-fit: cover;
     display: block;
+    filter: invert(1);
     transition: opacity 0.4s ease, transform 0.4s ease;
   }
 
